welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:4: error: not found: value avant
		avant();
                ^Runner:8: error: not found: value avant
		avant();
                ^Runner:12: error: not found: value avant
		avant();
                ^Runner:16: error: not found: value avant
		avant();
                ^Runner:20: error: not found: value avant
		avant();
                ^