welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
for (tour <- 0 to 7) {
	for (a <- 0 to 3) {
		avant();
	}
	gauche();
	for (a <- 0 to 1) {
		avant();
	}
	droite();
	for (a <- 0 to 3) {
		avant();
	}
	droite();
	for (a <- 0 to 1) {
		avant();
	}
	gauche();
	for (a <- 0 to 3) {
		avant();
	}
}
